fix article images on mobile

--- a/en/res/style/home.css
+++ b/en/res/style/home.css
@@ -85,11 +85,6 @@ border-radius:var(--radius-article);
 background:var(--color-bg-light);
 }
 
-article img
-{
-border-radius:var(--radius-article) 0 0 var(--radius-article);
-}
-
 #home_intro
 {
 margin:0 0 var(--section-margin) 0;
@@ -104,6 +99,7 @@ width:var(--width-article-imgs);
 transition:margin 0.15s linear 0.1s;
 */
 box-shadow: 0px 0px 40px var(--color-shadow);
+border-radius:var(--radius-article) 0 0 var(--radius-article);
 }
 
 #home_projects .project_entry
