--- a/en/res/style/mobile.css
+++ b/en/res/style/mobile.css
@@ -17,6 +17,7 @@ max-width:var(--width-article-imgs);
 #home_projects img
 {
 margin-left:calc(50% - var(--width-article-imgs) / 2);
+border-radius:var(--radius-article) var(--radius-article) 0 0;
 }
 
 #home_projects .project_entry
